# SEC-Drug-Asset-Extraction

./: .gitignore  README.md  docker-compose.yml
POC/: drug-etraction.py  fetching-data.py  new-step-2.py  sec-api.py  step-2-extraction.py
POC/poc-pinecone/: drug-etraction.py  fetching-data.py  step2-extraction.py
client/: Dockerfile  app.py  requirements.txt
sec-api-backend/: Dockerfile  pyproject.toml  requirements.txt  testing_ds.md
sec-api-backend/app/: config.py  main.py
sec-api-backend/app/controllers/: filing_controller.py
sec-api-backend/app/models/: schemas.py
sec-api-backend/app/routes/: filing_routes.py
sec-api-backend/app/services/: analysis_service.py  filing_service.py  vector_store_service.py
sec-api-backend/app/utils/: s3_utils.py  sec_utils.py
